syntax="proto3";

package storehouse_service;
option go_package="genproto/storehouse_service";

import "google/protobuf/empty.proto";
import "google/protobuf/struct.proto";

service UserService {
    rpc CreateUser(CreateUserRequest) returns (User) {}
    rpc GetByIDUser(UserPrimaryKey) returns (User) {}
    rpc GetListUser(GetListUserRequest) returns (GetListUserResponse) {}
    rpc UpdateUser(UpdateUserRequest) returns (User) {}
    rpc UpdatePatchUser(UpdatePatchUserRequest) returns (User) {}
    rpc DeleteUser(UserPrimaryKey) returns (google.protobuf.Empty) {}
}

message UserPrimaryKey {
    string id = 1;
}

message User {
    string id = 1;
    string first_name = 2;
    string last_name = 3;
    string login = 4;
    string phone_number = 5;
    string address = 6;
    string photo = 7;
    string type = 8;
    string status = 9;
    string branch_id = 10;
    string created_at = 11;
    string updated_at = 12;
}

message CreateUserRequest {
    string first_name = 1;
    string last_name = 2;
    string login = 3;
    string phone_number = 4;
    string address = 5;
    string photo = 6;
    string type = 7;
    string status = 8;
}

message UpdateUserRequest {
    string id = 1;
    string first_name = 2;
    string last_name = 3;
    string login = 4;
    string phone_number = 5;
    string address = 6;
    string photo = 7;
    string type = 8;
    string status = 9;
    string branch_id = 10;
}

message UpdatePatchUserRequest {
    string id = 1;
    google.protobuf.Struct fields = 2;
}

message GetListUserRequest {
    int32 limit = 1;
    int32 offset = 2;
    string search = 3;
}

message GetListUserResponse {
    int32 count = 1;
    repeated User users = 2;
}
